Fix overflow issues in layout. Add lazy loading for image

--- a/src/layouts/common/module.scss
+++ b/src/layouts/common/module.scss
@@ -5,4 +5,6 @@
   row-gap: 40px;
 
   min-height: 100vh;
+
+  overflow: hidden;
 }
