--- a/src/pages/home/module.scss
+++ b/src/pages/home/module.scss
@@ -19,8 +19,8 @@
     position: absolute;
     z-index: -1;
 
-    min-width: 152%;
-    min-height: 152%;
+    min-width: 150%;
+    min-height: 150%;
   }
 }
 
