--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -8,6 +8,4 @@ body {
   background-color: $bg-color;
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-  overflow: hidden;
 }
